--- a/dsml4220_prj.ipynb
+++ b/dsml4220_prj.ipynb
@@ -38,8 +38,7 @@
         "\n",
         "*****\n",
         "**Dataset:**\n",
-        "CNN/DailyMail: https://paperswithcode.com/dataset/cnn-daily-mail-1\n",
-        "BillSum\n"
+        "CNN/DailyMail: https://paperswithcode.com/dataset/cnn-daily-mail-1\n"
       ]
     },
     {
@@ -63,10 +62,24 @@
       },
       "outputs": [],
       "source": [
-        "# downloads packages for model, dataset and tokenzier\n",
+        "# downloads packages for model, dataset, rouge and tokenzier\n",
         "# --Quiet limits output of messages\n",
         "!pip install transformers datasets evaluate sentencepiece rouge_score --quiet"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install --upgrade huggingface-hub\n",
+        "\n",
+        "from huggingface_hub import notebook_login\n",
+        "notebook_login()"
+      ],
+      "metadata": {
+        "id": "DFQL9tVz6QWX"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -93,14 +106,13 @@
       "outputs": [],
       "source": [
         "# Load CNN/Daily Mail Dataset from dataset package\n",
-        "# Limit samples to 7000 total.\n",
         "\n",
         "train_sample_limit = 5000\n",
         "val_sample_limit = 2000\n",
         "\n",
         "dataset = load_dataset(\"cnn_dailymail\", \"3.0.0\")\n",
-        "limited_train_data = dataset[\"train\"].select(range(train_sample_limit))\n",
-        "limited_val_data = dataset[\"validation\"].select(range(val_sample_limit))\n"
+        "train_data = dataset[\"train\"].shuffle().select(range(train_sample_limit))\n",
+        "val_data = dataset[\"validation\"].shuffle().select(range(val_sample_limit))\n"
       ]
     },
     {
@@ -112,7 +124,8 @@
       "outputs": [],
       "source": [
         "# preprocess data for model\n",
-        "tokenizer = T5Tokenizer.from_pretrained(\"t5-base\")\n",
+        "model_T5 = \"vlassner01/t5_cnn_model_base_v4\"\n",
+        "tokenizer = T5Tokenizer.from_pretrained(model_T5)\n",
         "\n",
         "# limit length of input articles and output summary\n",
         "max_input_length = 512\n",
@@ -168,14 +181,14 @@
         "    return concatenate_datasets(processed_chunks)\n",
         "\n",
         "# process the training and validation data into chunks\n",
-        "train_dataset = process_in_chunks(limited_train_data, chunk_size, preprocess)\n",
-        "val_dataset = process_in_chunks(limited_val_data, chunk_size, preprocess)"
+        "train_dataset = process_in_chunks(train_data, chunk_size, preprocess)\n",
+        "val_dataset = process_in_chunks(val_data, chunk_size, preprocess)"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#Adds ROUGE to properly evaluate model\n",
+        "#Adds ROUGE to evaluate model\n",
         "import evaluate\n",
         "import numpy as np\n",
         "\n",
@@ -216,12 +229,12 @@
       "outputs": [],
       "source": [
         "# Load model T5-base\n",
-        "model = T5ForConditionalGeneration.from_pretrained(\"t5-base\")\n",
+        "model = T5ForConditionalGeneration.from_pretrained(model_T5)\n",
         "\n",
         "from transformers import Seq2SeqTrainingArguments\n",
         "\n",
         "training_args = Seq2SeqTrainingArguments(\n",
-        "    output_dir=\"./t5-cnn-model\",\n",
+        "    output_dir=\"./t5_cnn_model_base\",\n",
         "    eval_steps=500,\n",
         "    per_device_train_batch_size=4,    #batch size for training\n",
         "    per_device_eval_batch_size=4,     #batch size for evaluation\n",
@@ -307,16 +320,9 @@
         "# save model to huggingface for easier access for web app\n",
         "from huggingface_hub import HfApi, HfFolder\n",
         "from transformers import AutoModelForSequenceClassification, AutoTokenizer\n",
-        "from huggingface_hub import login\n",
-        "\n",
-        "login()\n",
-        "\n",
-        "# Load model and tokenizer\n",
-        "model = T5ForConditionalGeneration.from_pretrained(\"/content/t5_cnn_model_base_v4\")\n",
-        "tokenizer = T5Tokenizer.from_pretrained(\"/content/t5_cnn_model_base_v4\")\n",
         "\n",
         "# Save to HuggingFace\n",
-        "model.push_to_hub(\"vlassner01/t5_cnn_model_base_v4\")\n",
+        "model.push_to_hub(\"vlassner01/t5_cnn_model_base_v4\",  commit_message=\"Version_4\")\n",
         "tokenizer.push_to_hub(\"vlassner01/t5_cnn_model_base_v4\")"
       ]
     },
@@ -324,48 +330,45 @@
       "cell_type": "code",
       "source": [
         "# CHATGPT's work around for spiece.model not uploading to huggingface\n",
-        "!pip install --upgrade huggingface-hub\n",
+        "# Not needed for retraining\n",
         "\n",
         "\n",
-        "from huggingface_hub import login\n",
-        "login()\n",
+        "# !mkdir -p /content/hf_tokenizer_upload\n",
+        "# !cp -r /content/t5_cnn_model_base_v3/* /content/hf_tokenizer_upload/\n",
         "\n",
-        "!mkdir -p /content/hf_tokenizer_upload\n",
-        "!cp -r /content/t5_cnn_model_base_v3/* /content/hf_tokenizer_upload/\n",
+        "# from huggingface_hub import upload_file\n",
         "\n",
-        "from huggingface_hub import upload_file\n",
+        "# repo_name = \"vlassner01/t5_cnn_model_base_v4\"\n",
         "\n",
-        "repo_name = \"vlassner01/t5_cnn_model_base_v4\"\n",
+        "# folder_path = '/content/hf_tokenizer_upload'\n",
         "\n",
-        "folder_path = '/content/hf_tokenizer_upload'\n",
+        "# upload_file(\n",
+        "#     path_or_fileobj=f\"{folder_path}/spiece.model\",  # Replace with actual file path\n",
+        "#     path_in_repo=\"spiece.model\",  # Path in the Hugging Face repo\n",
+        "#     repo_id=repo_name,\n",
+        "#     commit_message=\"Upload spiece.model\"\n",
+        "# )\n",
         "\n",
-        "upload_file(\n",
-        "    path_or_fileobj=f\"{folder_path}/spiece.model\",  # Replace with actual file path\n",
-        "    path_in_repo=\"spiece.model\",  # Path in the Hugging Face repo\n",
-        "    repo_id=repo_name,\n",
-        "    commit_message=\"Upload spiece.model\"\n",
-        ")\n",
+        "# upload_file(\n",
+        "#     path_or_fileobj=f\"{folder_path}/tokenizer_config.json\",  # Replace with actual file path\n",
+        "#     path_in_repo=\"tokenizer_config.json\",  # Path in the Hugging Face repo\n",
+        "#     repo_id=repo_name,\n",
+        "#     commit_message=\"Upload tokenizer_config.json\"\n",
+        "# )\n",
         "\n",
-        "upload_file(\n",
-        "    path_or_fileobj=f\"{folder_path}/tokenizer_config.json\",  # Replace with actual file path\n",
-        "    path_in_repo=\"tokenizer_config.json\",  # Path in the Hugging Face repo\n",
-        "    repo_id=repo_name,\n",
-        "    commit_message=\"Upload tokenizer_config.json\"\n",
-        ")\n",
+        "# upload_file(\n",
+        "#     path_or_fileobj=f\"{folder_path}/special_tokens_map.json\",  # Replace with actual file path\n",
+        "#     path_in_repo=\"special_tokens_map.json\",  # Path in the Hugging Face repo\n",
+        "#     repo_id=repo_name,\n",
+        "#     commit_message=\"Upload special_tokens_map.json\"\n",
+        "# )\n",
         "\n",
-        "upload_file(\n",
-        "    path_or_fileobj=f\"{folder_path}/special_tokens_map.json\",  # Replace with actual file path\n",
-        "    path_in_repo=\"special_tokens_map.json\",  # Path in the Hugging Face repo\n",
-        "    repo_id=repo_name,\n",
-        "    commit_message=\"Upload special_tokens_map.json\"\n",
-        ")\n",
-        "\n",
-        "upload_file(\n",
-        "    path_or_fileobj=f\"{folder_path}/tokenizer.json\",  # Replace with actual file path\n",
-        "    path_in_repo=\"tokenizer.json\",  # Path in the Hugging Face repo\n",
-        "    repo_id=repo_name,\n",
-        "    commit_message=\"Upload tokenizer.json\"\n",
-        ")"
+        "# upload_file(\n",
+        "#     path_or_fileobj=f\"{folder_path}/tokenizer.json\",  # Replace with actual file path\n",
+        "#     path_in_repo=\"tokenizer.json\",  # Path in the Hugging Face repo\n",
+        "#     repo_id=repo_name,\n",
+        "#     commit_message=\"Upload tokenizer.json\"\n",
+        "# )"
       ],
       "metadata": {
         "id": "zmEsID1yZdWy"
@@ -378,7 +381,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMQjoGlgn6/SpR/2zQYaD5y",
+      "authorship_tag": "ABX9TyOFXTdofk5gHaQVngemB5OS",
       "include_colab_link": true
     },
     "kernelspec": {
