--- a/dsml4220_prj.ipynb
+++ b/dsml4220_prj.ipynb
@@ -64,22 +64,9 @@
       "source": [
         "# downloads packages for model, dataset, rouge and tokenzier\n",
         "# --Quiet limits output of messages\n",
-        "!pip install transformers datasets evaluate sentencepiece rouge_score --quiet"
+        "!pip install transformers datasets evaluate sentencepiece rouge_score --quiet\n",
+        "!pip install --upgrade huggingface-hub\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install --upgrade huggingface-hub\n",
-        "\n",
-        "from huggingface_hub import notebook_login\n",
-        "notebook_login()"
-      ],
-      "metadata": {
-        "id": "DFQL9tVz6QWX"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -91,10 +78,16 @@
       "source": [
         "# Download packages\n",
         "from datasets import load_dataset, concatenate_datasets\n",
-        "from transformers import T5ForConditionalGeneration, TrainingArguments, Trainer, T5Tokenizer\n",
+        "from transformers import T5ForConditionalGeneration, TrainingArguments, Trainer, T5Tokenizer, DataCollatorForSeq2Seq, Seq2SeqTrainer\n",
+        "from huggingface_hub import HfApi, HfFolder, notebook_login\n",
+        "from transformers import AutoModelForSequenceClassification, AutoTokenizer\n",
         "import torch\n",
         "from torch.utils.data import DataLoader\n",
-        "import torch"
+        "import torch\n",
+        "import evaluate\n",
+        "import numpy as np\n",
+        "\n",
+        "notebook_login()"
       ]
     },
     {
@@ -189,8 +182,6 @@
       "cell_type": "code",
       "source": [
         "#Adds ROUGE to evaluate model\n",
-        "import evaluate\n",
-        "import numpy as np\n",
         "\n",
         "rouge = evaluate.load(\"rouge\")\n",
         "\n",
@@ -231,8 +222,6 @@
         "# Load model T5-base\n",
         "model = T5ForConditionalGeneration.from_pretrained(model_T5)\n",
         "\n",
-        "from transformers import Seq2SeqTrainingArguments\n",
-        "\n",
         "training_args = Seq2SeqTrainingArguments(\n",
         "    output_dir=\"./t5_cnn_model_base\",\n",
         "    eval_steps=500,\n",
@@ -256,8 +245,6 @@
       "outputs": [],
       "source": [
         "# adds padding so shorter sequences match the longest one\n",
-        "from transformers import DataCollatorForSeq2Seq\n",
-        "\n",
         "data_collator = DataCollatorForSeq2Seq(tokenizer=tokenizer, model=model)"
       ]
     },
@@ -270,7 +257,6 @@
       "outputs": [],
       "source": [
         "# train model using hugging face's trainer class\n",
-        "from transformers import Seq2SeqTrainer\n",
         "\n",
         "trainer = Seq2SeqTrainer(\n",
         "    model=model,\n",
@@ -318,10 +304,6 @@
       "outputs": [],
       "source": [
         "# save model to huggingface for easier access for web app\n",
-        "from huggingface_hub import HfApi, HfFolder\n",
-        "from transformers import AutoModelForSequenceClassification, AutoTokenizer\n",
-        "\n",
-        "# Save to HuggingFace\n",
         "model.push_to_hub(\"vlassner01/t5_cnn_model_base_v4\",  commit_message=\"Version_4\")\n",
         "tokenizer.push_to_hub(\"vlassner01/t5_cnn_model_base_v4\")"
       ]
@@ -381,7 +363,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOFXTdofk5gHaQVngemB5OS",
+      "authorship_tag": "ABX9TyNJTNDb0IGfYUFh6Q8mtsvF",
       "include_colab_link": true
     },
     "kernelspec": {
